# vGROUT_pub

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
data/leetcode/: leetcode_test_medhard.jsonl
data/pairs/: hack_pairs.md  pair_diagnostics.md
data/pairsets/: prog_wide_clean.json
data/pools/substrate/: partition.json
data/pools/teacher_pool/: report.md
docs/: human_journal.md  research_journal.md  research_notes.md
scripts/: results_deploy.py  verify_antipasto.py  verify_corda.py  verify_eval_gap.py  verify_lora2r_routing.py  verify_partition.py  verify_rewards.py  verify_rotation.py  verify_science_invariants.py  verify_scorda.py
src/small_reward_hacking/: README.md  __init__.py  data.py  rewards.py
src/vgrout/: __init__.py  derisk_loopholes.py  eval.py  extract_vhack_act.py  extract_vhack_grad.py  figs.py  pairs.py  pairs_from_pool.py  proj.py  regrade_pool.py  run_artifacts.py  tablelog.py  train.py  train_config.py
src/vgrout/adapters/: __init__.py  antipasto.py  common.py  corda.py  lora.py  pissa.py  scorda.py
