[project]
name = "vgrout"
version = "0.1.0"
description = "vGROUT: vector gradient routing against reward hacking"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.4",
    "transformers>=4.45",
    "einops>=0.8",
    "jaxtyping>=0.2",
    "beartype>=0.18",
    "loguru>=0.7",
    "polars>=1.0",
    "tabulate>=0.9",
    "tyro>=0.8",
    "tqdm>=4.66",
    "numpy<2.0",
    "huggingface_hub>=0.24",
    "safetensors>=0.4",
]

[tool.ruff.lint]
ignore = ["F722"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
